[tool.poetry]
name = "paperscraper"
version = "0.1.0-alpha.1"
description = "Scrape and provide interface for data from dblp"
authors = []

[tool.poetry.dependencies]
python = "~=3.8"
lxml = "^4.8.0"
pandas = "^1.4.1"
beautifulsoup4 = "^4.10.0"
selenium = "^4.1.3"
numpy = "^1.22.3"
click = "^8.0.4"
loguru = "^0.6.0"
tqdm = "^4.63.0"
webdriver-manager = "^3.5.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
paperscraper = "paperscraper._cli:cli"